# huffml

./: dune-project  huffml.opam
lib/: Encoder.ml  Huffman.ml  Utils.ml  decoder.ml  dune
test/: dune  test_decoder.ml  test_encoder.ml  test_huffman.ml  test_runner.ml  test_utils.ml
