(lang dune 3.15)

(name huffml)

(generate_opam_files true)

(source
 (github fparadas/huffml))

(authors "Felipe Paradas")

(maintainers "Felipe Paradas")

(package
 (name huffml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
